# paketmagie

./: .gitignore  CONTRIBUTING.adoc  LocationHandler.py  Main.hs  Path.json  README.adoc  README.md  Route.json  exchangePoints.json  paketmagie.cabal  shell.nix  structure.md
Paketmagie/: Readme.md  Routing.hs
discarded/: Package.json  Readme.md
glue/: Readme.md
haskell/: Graphs.hs  Main.hs  PaketmagieRouting.cabal  demo.sh  graph.json  shell.nix
python/: LocationHandler.py  Readme.md  Users.json  converter.py  exchangePoints.json
src/: Main.hs
src/Paketmagie/: GenGraph.hs  Graph.hs  Readme.md  Routing.hs
src/Paketmagie/Routing/: New.hs
