name:                paketmagie
version:             0.1.0.0
synopsis:            Routing Packages magically
license:             GPL-3
license-file:        LICENSE
author:              sternenseemann & brotknust & Bez
maintainer:          git@lukasepple.de
build-type:          Simple
cabal-version:       >=1.10

executable Paketmagie
  main-is:             Main.hs
  build-depends:       base
                    ,  aeson
                    ,  bytestring
                    ,  vector
  other-extensions:    PatternGuards, OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010
library
  exposed-modules:     Paketmagie.Routing
                    ,  Paketmagie.Graph
  build-depends:       base
                    ,  containers
                    ,  bytestring
                    ,  vector
  hs-source-dirs:      src
  default-language:    Haskell2010
